doc: L18 update comments